--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="https://cloudco-tech.github.io/test/">Cloud Computing and Cloud</a>
+        <a class="nav-link" href="https://cloudco-tech.github.io/CloudComputing-Cloud/">Cloud Computing and Cloud</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://cloudco-tech.github.io/test-2/">About Us</a>
+        <a class="nav-link" href="https://cloudco-tech.github.io/CloudComputing-AboutUs/">About Us</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="https://cloudco-tech.github.io/test-3/">References<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="https://cloudco-tech.github.io/CloudComputing-References/">References<span class="sr-only">(current)</span></a>
       </li>
     </ul>
   </div>
